week03/kuber-challenge/k8s-manifests/networking/api-services.yaml
# 백엔드 API ClusterIP Service


# user-service
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: backend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: user-service

---

# product-service
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: backend
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  selector:
    app: product-service

---

# order-service
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: backend
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
    name: http
  selector:
    app: order-service
