week03/kuber-challenge/k8s-manifests/networking/db-services.yaml
# 데이터베이스 ClusterIP Service

# postgres-user-service
apiVersion: v1
kind: Service
metadata:
  name: postgres-user-service
  namespace: data
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres-user

---

# mongodb-product-service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-product-service
  namespace: data
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongodb-product

---

# redis-cache-service
apiVersion: v1
kind: Service
metadata:
  name: redis-cache-service
  namespace: data
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis-cache
