week03/kuber-challenge/k8s-manifests/networking/front-service.yaml
# web-frontend-service
apiVersion: v1
kind: Service
metadata:
  name: web-frontend-service
  namespace: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: web-frontend
